2001-08-16  Arturo Espinosa Aldama  <arturo@ximian.com>

	* ishare.pl.in (xst_ishare_dhcp_conf_add_interface): Oops:
	missing semicolons here.

2001-08-15  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot.pl.in: Removed use strict until we can honour this
	clause.

2001-08-15  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_probe): Added X probing functions.
	Added Modeline functions. Added ability to add new sections.

2001-08-14  Arturo Espinosa Aldama  <arturo@ximian.com>

	* general.pl.in (xst_directive_fail): Some functions that
	have to be called every time a directive fails for different
	reasons.
	(xst_directive_run): Use this new thing, which now sends
	the end directive and the end of request string, so frontend
	doesn't hang. Renamed from xst_run_directive.
	(xst_run): Use directive_run.

2001-08-13  Arturo Espinosa Aldama  <arturo@ximian.com>

	* file.pl.in (xst_file_close): New abstraction for close.
	I got some errors for doing close undef (although perl -d has
	no trouble with that expression), so we're using this now, for
	simplicity.
	* *.in: changed all calls to close $var to &xst_file_close ($var).

2001-08-13  Tambet Ingo  <tambet@ximian.com>

	* configure.in: Fixed capitalization.

2001-08-09  Arturo Espinosa Aldama  <arturo@ximian.com>

	* ishare.pl.in (xst_ishare_fwrules_get_ipchains): Small
	correction to "configured" ipchains tag.

	* xml.pl.in (xst_xml_print_array): Use xst_xml_print_structure.
	(xst_xml_print_hash): same.
	(xst_xml_print_structure): Call the corresponding function
	depending on the reference type of $s. If just a scalar, print
	<$tag>$s</$tag>.

	* internetsharing-conf.in (xml_parse_fwrules): "overwrite"
	tag support for ipchains too.

	* ishare.pl.in (xst_ishare_dhcp_isc_save): Oops. The
	required argument is the hwaddr, only.
	(xst_ishare_dhcp_isc_set): Activate the dhcpd service:
	not ipchains (here).
	(xst_ishare_fwrules_set_ipchains): "overwrite" tag
	support for ipchains too.
